<resources>
    <string name="app_name">Color My Views</string>
  <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="box_three">Box Three</string>
    <string name="red">Red</string>
  <string name="yellow_button">Yellow</string>
  <string name="green_button">Green</string>
  <string name="how_to_play">How To Play</string>
  <string name="tap_boxes_and_buttons_and_screen">Tap on the buttons, screen and the boxes</string>
</resources>
