<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:layout_margin="16dp"
                                                   tools:context=".MainActivity" android:id="@+id/constraint_layout">

    <TextView
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/box_one"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            tools:layout_editor_absoluteX="0dp" android:id="@+id/box_two_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one" style="@style/WhiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" style="@style/WhiteBox"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
    />
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            style="@style/WhiteBox"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            style="@style/WhiteBox"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.978"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/yellow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.978" app:layout_constraintStart_toEndOf="@+id/red_button"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/green_button"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/green_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_button"
            app:layout_constraintStart_toEndOf="@+id/yellow_button"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.885" app:layout_constraintTop_toTopOf="@+id/yellow_button"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp" android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"/>
    <TextView
            android:text="@string/tap_boxes_and_buttons_and_screen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/box_two_text"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/yellow_button"
            app:layout_constraintVertical_bias="0.064"/>


</androidx.constraintlayout.widget.ConstraintLayout>